--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   tfsec:
     uses: clouddrove/github-shared-workflows/.github/workflows/tfsec.yml@internal_502
-    secrets: inherit
-    # secrets: ${{ secrets.GITHUB }}
+    # secrets: inherit
+    secrets: ${{ secrets.GITHUB }}
     with:
       working_directory: '.'
