--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -7,6 +7,7 @@ jobs:
   tfsec:
     uses: clouddrove/github-shared-workflows/.github/workflows/tfsec.yml@internal_502
     # secrets: inherit
-    secrets: ${{ secrets.GITHUB }}
+    secrets:
+      GITHUB: ${{ secrets.GITHUB }}
     with:
       working_directory: '.'
