--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -1,9 +1,8 @@
-
 name: Checkov
 on:
-  # push:
-  #   branches:
-  #     - tflint-3
+  push:
+    branches:
+      - tflint-3
   workflow_dispatch:
 jobs:
   build:
