--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -15,6 +15,6 @@ jobs:
     with:
      directory: ./k8s/
      framework: kubernetes 
-     continue_on_error: false
+     continue_on_error: true
 
   
