--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -13,7 +13,7 @@ jobs:
       actions: read #
     uses: clouddrove/github-shared-workflows/.github/workflows/checkov.yml@issue_502
     with:
-     directory: ./prod/
+     directory: ./efs/
      framework: Terraform 
      continue_on_error: true
 
